# Audit/openapi.yml
@@ -6,6 +6,31 @@ info:
   contact:
     email: gsingh403@my.bcit.ca
 paths:
+  /health:
+    get:
+      tags:
+        - devices
+      summary: gets the event stats
+      operationId: app.health_check
+      description: Gets orders received and damaged parts statistics
+      responses:
+        '200':
+          description: Successfully returned a list of orders received and damaged parts events
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/Health'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
   /orders/received:
     get:
       summary: gets a ordered part reading from history
@@ -81,6 +106,14 @@ paths:
 
 components:
   schemas:
+    Health:
+      required:
+      - audit
+      type: object
+      properties:
+        audit:
+          type: string
+          example: A12345
     OrderedParts:
       required:
       - order_date
